# kasper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Taskfile.yml  syzkaller.cfg.template
passes/: CMakeLists.txt
passes/count-instrs/: CMakeLists.txt  CountInstrs.cpp
passes/include/: pass.h
passes/include/kspecem/: KSpecEmABIList.h
passes/kspecem/: CMakeLists.txt  KSpecEm.cpp
passes/kspecem-abilists/: blacklist-funcs.txt  interrupt-funcs.txt  no-spec-funcs.txt
passes/kspecem-check-spec-length/: CMakeLists.txt  KSpecEmCheckSpecLength.cpp
passes/kspecem-pf-checker/: CMakeLists.txt  KSpecEmPfChecker.cpp
passes/kspecem-spec/: CMakeLists.txt  KSpecEmSpec.cpp
scripts/: compile-testcases.py  gdb.sh  run-qemu.sh
static/kspecem/: CMakeLists.txt  kspecem_assert.c  kspecem_bugs.c  kspecem_common.c  kspecem_init.c  kspecem_interface.c  kspecem_internal.c  kspecem_interrupt.c  kspecem_kdf.c  kspecem_pf_checker.c  kspecem_registers.c  kspecem_regs.S  kspecem_report.c  kspecem_stack.c  kspecem_statistics.c  kspecem_stats_inlineasm.c  kspecem_stats_restarts.c  kspecem_undolog.c  kspecem_utils.c  kspecem_whitelist.c
static/kspecem/include/: calling.h  kspecem_assert.h  kspecem_bugs.h  kspecem_common.h  kspecem_init.h  kspecem_interface.h  kspecem_internal.h  kspecem_interrupt.h  kspecem_kdf.h  kspecem_pf_checker.h  kspecem_print.h  kspecem_registers.h  kspecem_report.h  kspecem_stack.h  kspecem_statistics.h  kspecem_stats_inlineasm.h  kspecem_stats_restarts.h  kspecem_types.h  kspecem_undolog.h  kspecem_utils.h  kspecem_whitelist.h  sysdep.h
(+9 files in other folders)
